Overflow fixed

--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -20,5 +20,5 @@
 
 body {
   background-color: var(--custom-white);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
